--- a/pages/roomAdd.html
+++ b/pages/roomAdd.html
@@ -34,7 +34,7 @@
                 <!--/客房名-->
                 <!--客房图-->
                 <div class="form-group">
-                    <label>客房图片</label>
+                    <label>图片</label>
                     <small>建议使用宽高16:9、大小200kb以内的图片</small>
                     <div class="row">
                         <div class="col-xs-12">
