--- a/pages/tv/categoryPic_Guide_CatEdit.html
+++ b/pages/tv/categoryPic_Guide_CatEdit.html
@@ -1,11 +1,11 @@
-<div ng-controller="tvTextCateEditController as tvTextCateEdit" ng-init="tvTextCateEdit.init()" class="modal-dialog modal-sm">
+<div ng-controller="tvCatPicCateEditController as tvPicCateEdit" ng-init="tvPicCateEdit.init()" class="modal-dialog modal-sm">
     <div class="modal-content">
         <!-- loading -->
         <!-- form -->
-        <form novalidate name="tvTextCateEditForm" ng-submit="tvTextCateEditForm.$valid && tvTextCateEdit.save()">
+        <form novalidate name="tvPicCateEditForm" ng-submit="tvPicCateEditForm.$valid && tvPicCateEdit.save()">
             <!--header-->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" ng-click="tvTextCateEdit.cancel()">
+                <button type="button" class="close" data-dismiss="modal" ng-click="tvPicCateEdit.cancel()">
                     <span aria-hidden="true">&times;</span>
                     <span class="sr-only">Close</span>
                 </button>
@@ -17,30 +17,30 @@
                 <!-- 分类序号 -->
                 <div class="form-group">
                     <label>序号</label>
-                    <input type="number" name="" required placeholder="（必填）" ng-model="tvTextCateEdit.Seq" class="form-control">
+                    <input type="number" name="" required placeholder="（必填）" ng-model="tvPicCateEdit.Seq" class="form-control">
                 </div>
                 <!-- 分类序号 -->
 
                 <!-- 分类名称 -->
-                <ng-repeat ng-repeat="lang in tvTextCateEdit.editLangs track by $index">
+                <ng-repeat ng-repeat="lang in tvPicCateEdit.editLangs track by $index">
                     <div class="form-group" ng-if="lang.default==true">
                         <label>分类名称({{lang.name}})</label>
-                        <input type="text" name="" required placeholder="（必填）" ng-model="tvTextCateEdit.cateName[lang.code]" class="form-control">
+                        <input type="text" name="" required placeholder="（必填）" ng-model="tvPicCateEdit.cateName[lang.code]" class="form-control">
                     </div>
                     <div class="form-group" ng-if="lang.default!==true">
                         <label>分类名称({{lang.name}})</label>
-                        <input type="text" name="" ng-model="tvTextCateEdit.cateName[lang.code]" class="form-control">
+                        <input type="text" name="" ng-model="tvPicCateEdit.cateName[lang.code]" class="form-control">
                     </div>
                 </ng-repeat>
                 <!-- 分类名称 -->
-            </div>
+
             <!--body end-->
             <!--footer-->
             <div class="modal-footer">
                 <!-- 取消 -->
-                <button type="button" class="btn btn-default btn-sm" ng-click="tvTextCateEdit.cancel()">{{'CANCEL' | translate}}</button>
+                <button type="button" class="btn btn-default btn-sm" ng-click="tvPicCateEdit.cancel()">{{'CANCEL' | translate}}</button>
                 <!-- 保存 -->
-                <button type="submit" class="btn btn-primary  btn-sm" ng-disabled="tvTextCateEditForm.$invalid || tvTextCateEdit.saving">
+                <button type="submit" class="btn btn-primary  btn-sm" ng-disabled="tvPicCateEditForm.$invalid || tvPicCateEdit.saving">
                     <i class="icon ion-ios-checkmark-outline"></i> {{'SAVE' | translate}}
                 </button>
             </div>
