--- a/pages/tv/categoryText_DI_CatAdd.html
+++ b/pages/tv/categoryText_DI_CatAdd.html
@@ -1,10 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div ng-controller="tvTextCateAddController as tvTextCateAdd" ng-init="tvTextCateAdd.init()" class="modal-dialog modal-sm">
+    <div class="modal-content">
+        <!-- loading -->
+        <!-- form -->
+        <form novalidate name="tvTextCateAddForm" ng-submit="tvTextCateAddForm.$valid && tvTextCateAdd.save()">
+            <!--header-->
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" ng-click="tvTextCateAdd.cancel()">
+                    <span aria-hidden="true">&times;</span>
+                    <span class="sr-only">Close</span>
+                </button>
+                <h5 class="modal-title">添加分类</h5>
+            </div>
+            <!--header end-->
+            <!--body-->
+            <div class="modal-body">
+                <!-- 分类序号 -->
+                <div class="form-group">
+                    <label>序号</label>
+                    <input type="number" name="" required placeholder="（必填）" ng-model="tvTextCateAdd.Seq" class="form-control">
+                </div>
+                <!-- 分类序号 -->
+
+                <!-- 分类名称 -->
+                <ng-repeat ng-repeat="lang in tvTextCateAdd.editLangs track by $index">
+                    <div class="form-group" ng-if="lang.default==true">
+                        <label>分类名称({{lang.name}})</label>
+                        <input type="text" name="" required placeholder="（必填）" ng-model="tvTextCateAdd.cateName[lang.code]" class="form-control">
+                    </div>
+                    <div class="form-group" ng-if="lang.default!==true">
+                        <label>分类名称({{lang.name}})</label>
+                        <input type="text" name="" ng-model="tvTextCateAdd.cateName[lang.code]" class="form-control">
+                    </div>
+                </ng-repeat>
+                <!-- 分类名称 -->
+            </div>
+            <!--body end-->
+            <!--footer-->
+            <div class="modal-footer">
+                <!-- 取消 -->
+                <button type="button" class="btn btn-default btn-sm" ng-click="tvTextCateAdd.cancel()">{{'CANCEL' | translate}}</button>
+                <!-- 保存 -->
+                <button type="submit" class="btn btn-primary  btn-sm" ng-disabled="tvTextCateAddForm.$invalid || tvTextCateAdd.saving">
+                    <i class="icon ion-ios-checkmark-outline"></i> {{'SAVE' | translate}}
+                </button>
+            </div>
+            <!--footer end-->
+
+        </form>
+    </div>
+</div>
