--- a/pages/tv/categoryText_DI_TextAdd.html
+++ b/pages/tv/categoryText_DI_TextAdd.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div ng-controller="tvTextAddController as tvTextAdd" ng-init="tvTextAdd.init()" class="autoscroll modal-dialog modal-sm">
+    <div class="modal-content">
+        <!--header-->
+        <div class="modal-header">
+            <button type="button" class="close" ng-click="tvTextAdd.cancel()">
+                <span aria-hidden="true">&times;</span>
+                <span class="sr-only">Close</span>
+            </button>
+            <h5 class="modal-title">添加信息</h5>
+        </div>
+        <!--/header end-->
+        <!--body-->
+        <div class="modal-body">
+            <form id="tvTextAddForm" name="tvTextAddForm" ng-submit="tvTextAddForm.$valid && tvTextAdd.save()">
+                <div class="form-group">
+                    <!--序号-->
+                    <label>序号</label>
+                    <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                    type="number" ng-model="tvTextAdd.Seq" min="1" required placeholder="（必填）"/>
+                    <!--/序号-->
+                </div>
+                <!--标题-->
+                <div class="form-group">
+                    <ng-repeat ng-repeat="lang in tvTextAdd.editLangs">
+                        <ng-if ng-if="lang.default">
+                            <label>标题{{lang.name}}：</label>
+                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                            ng-model="tvTextAdd.Title[lang.code]" required placeholder="（必填）" />
+                        </ng-if>
+                        <ng-if ng-if="lang.default !== true">
+                            <label>标题 {{lang.name}}：</label>
+                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                            ng-model="tvTextAdd.Title[lang.code]" />
+                        </ng-if>
+                    </ng-repeat>
+                </div>
+                <!--/标题-->
+                <div class="form-group">
+                    <!--详情-->
+                    <ng-repeat ng-repeat="lang in tvTextAdd.editLangs">
+                        <ng-if ng-if="lang.default">
+                            <label>详情{{lang.name}}：</label>
+                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="tvTextAdd.Text[lang.code]">{{tvTextAdd.Text[lang.code]}}</textarea>
+                        </ng-if>
+                        <ng-if ng-if="lang.default !== true">
+                            <label>详情 {{lang.name}}：</label>
+                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="tvTextAdd.Text[lang.code]">{{tvTextAdd.Text[lang.code]}}</textarea>
+                        </ng-if>
+                    </ng-repeat>
+                    <!--/详情-->
+                </div><!--form-group-->
+
+            </form>
+        </div>
+        <!--/body end-->
+        <!--footer-->
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default btn-sm" ng-click="tvTextAdd.cancel()">取消</button>
+            <button type="submit" class="btn btn-primary btn-sm" form="tvTextAddForm" ng-disabled="tvTextAdd.saving">保存</button>
+        </div>
+        <!--/footer end-->
+    </div>
+</div>
