--- a/pages/tv/categoryText_DiseaseInfo.html
+++ b/pages/tv/categoryText_DiseaseInfo.html
@@ -1,10 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div ng-controller="tvCatTextListController as tvCTList" ng-init="tvCTList.init()">
+    <!-- loading -->
+    <div ng-show="tvCTList.loading">loading...</div>
+    <!-- loading -->
+
+    <!-- 分类标签 -->
+    <ul class="nav nav-tabs">
+        <li ng-repeat="cate in tvCTList.info track by $index" class="cursor-pointer {{$index == tvCTList.cateIndex ? 'active': ''}}">
+            <a ng-click="tvCTList.loadPics($index)">{{cate.Title[tvCTList.defaultLangCode]}}</a>
+        </li>
+
+        <li class="cursor-pointer">
+            <a ng-click="tvCTList.addCategory()">
+                <i class="icon ion-android-add-circle"></i> 分类添加
+            </a>
+        </li>
+    </ul>
+    <!-- 按钮: 编辑分类 -->
+    <a ng-if="tvCTList.info.length > 0" ng-click="tvCTList.editCate()" class="button button-light">
+        <i class="icon ion-ios-compose-outline"></i> 编辑分类
+    </a>
+    <!-- 按钮: 删除分类 -->
+    <a ng-if="tvCTList.info.length > 0" ng-disabled="tvCTList.cateDeleting" ng-click="tvCTList.delCate()" class="button button-light">
+        <i class="icon ion-ios-trash-outline"></i> 删除分类
+    </a>
+    <!--添加图片按钮-->
+    <a ng-if="tvCTList.info.length > 0" class="button button-light" ng-click="tvCTList.addPic()">
+        <i class="icon ion-ios-plus-outline"></i>
+        添加信息
+    </a>
+
+    <!--图文列表 开始-->
+    <table class="table">
+        <thead>
+        <tr>
+            <th>序号</th>
+            <th>标题</th>
+            <th>详情</th>
+            <th>操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="pic in tvCTList.info[tvCTList.cateIndex].sub track by $index">
+            <td>{{pic.Seq}}</td>
+            <td>{{pic.Title[tvCTList.defaultLangCode]}}</td>
+            <td>{{pic.Text[tvCTList.defaultLangCode]}}</td>
+            <td>
+                <!--编辑按钮-->
+                <a class="" ng-click="tvCTList.editPic($index)">编辑</a>
+                <!--编辑按钮-->
+                <!--删除按钮-->
+                <a class="" ng-click="tvCTList.delPic($index)">删除</a>
+                <!--删除按钮-->
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <div ng-if="tvCTList.info[tvCTList.cateIndex].sub.length == 0">空</div>
+    <!--图文列表 结束-->
+</div>
