--- a/pages/hotelRoom.html
+++ b/pages/hotelRoom.html
@@ -9,9 +9,8 @@
             		{{item.Name[hotelRoom.defaultLangCode]}}
             	</a>
                 <ul  class="nav-stacked  panel-collapse" ng-if="hotelRoom.idd == item.ID" style="padding:0" >
-                    <li ng-repeat="sec in hotelRoom.seclist"  style="list-style: none" id={{sec.ID}} ui-sref-active="active"  ng-click="hotelRoom.changeToSection(item.ID, sec.ID)">
-                        <a ng-hide="true"></a>
-                        <button class="btn-default" style="width: 100%;border: 0" >{{sec.Name[hotelRoom.defaultLangCode]}}</button>
+                    <li ng-repeat="sec in hotelRoom.seclist"  style="list-style: none" id={{sec.ID}} ui-sref-active="active">
+                        <button class="btn-default" style="width: 100%;border: 0" ng-click="hotelRoom.changeToSection(item.ID, sec.ID)">{{sec.Name[hotelRoom.defaultLangCode]}}</button>
                     </li>
                 </ul>
             </li>
