--- a/pages/hospitalFood.html
+++ b/pages/hospitalFood.html
@@ -26,7 +26,7 @@
     <!--添加图片按钮-->
     <a ng-if="food.info.length > 0" class="button button-light" ng-click="food.addPic()">
         <i class="icon ion-ios-plus-outline"></i>
-        添加图片
+        添加图文
     </a>
 
     <!--图文列表 开始-->
