--- a/pages/projectConfig/sectionAdd.html
+++ b/pages/projectConfig/sectionAdd.html
@@ -40,7 +40,7 @@
 
                 <!--模块图片-->
                 <div class="form-group">
-                    <label>模块图标</label>
+                    <label>分区图标</label>
                     <!--修改模块图片按钮-->
                     <input id="upload1" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload1" />
                     <a ng-click="secAdd.clickUpload('upload1')">上传</a>
@@ -68,7 +68,7 @@
 
                 <!--模块高亮图片-->
                 <div class="form-group">
-                    <label>模块高亮图标</label>
+                    <label>分区高亮图标</label>
                     <!--修改模块高亮图片按钮-->
                     <input id="upload2" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload2" />
                     <a ng-click="secAdd.clickUpload('upload2')">上传</a>
