--- a/pages/hospitalEquipment.html
+++ b/pages/hospitalEquipment.html
@@ -2,7 +2,7 @@
     <!--添加直播频道按钮-->
     <a class="button button-light" ng-click="equip.add()">
         <i class="icon ion-ios-plus-outline"></i>
-        添加图片
+        添加图文
     </a>
     <!--添加直播频道按钮-->
     <!--直播列表-->
