--- a/pages/hospitalFoodPicTextEdit.html
+++ b/pages/hospitalFoodPicTextEdit.html
@@ -6,7 +6,7 @@
                 <span aria-hidden="true">&times;</span>
                 <span class="sr-only">Close</span>
             </button>
-            <h5 class="modal-title">添加图片</h5>
+            <h5 class="modal-title">编辑图文信息</h5>
         </div>
         <!--/header end-->
         <!--body-->
