--- a/pages/hotelRoom.html
+++ b/pages/hotelRoom.html
@@ -10,7 +10,7 @@
             	</a>
                 <ul  class="nav-stacked  panel-collapse" ng-if="hotelRoom.idd == item.ID" style="padding:0" >
                     <li ng-repeat="sec in hotelRoom.seclist"  style="list-style: none" id={{sec.ID}} ui-sref-active="active">
-                        <button class="btn-default" style="width: 100%;border: 0" ng-click="hotelRoom.changeToSection(item.ID, sec.ID)">{{sec.Name[hotelRoom.defaultLangCode]}}</button>
+                        <button class="btn-default" style="width: 100%;border: 0;padding-left: 30px;text-align: left;" ng-click="hotelRoom.changeToSection(item.ID, sec.ID)">{{sec.Name[hotelRoom.defaultLangCode]}}</button>
                     </li>
                 </ul>
             </li>
