--- a/pages/projectConfig/sectionEdit.html
+++ b/pages/projectConfig/sectionEdit.html
@@ -28,7 +28,7 @@
                 </ng-repeat>
                 <!--模块图片-->
                 <div class="form-group">
-                    <label>模块图标</label>
+                    <label>分区图标</label>
                     <!--修改模块图片按钮-->
                     <input id="upload1" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload1" />
                     <a ng-click="secEdit.clickUpload('upload1')">上传</a>
@@ -56,7 +56,7 @@
 
                 <!--模块高亮图片-->
                 <div class="form-group">
-                    <label>模块高亮图标</label>
+                    <label>分区高亮图标</label>
                     <!--修改模块高亮图片按钮-->
                     <input id="upload2" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload2" />
                     <a ng-click="secEdit.clickUpload('upload2')">上传</a>
@@ -88,7 +88,7 @@
         <!--footer-->
         <div class="modal-footer">
             <!-- 取消 -->
-            <button ng-click="secEdit.cancel()" type="button" class="btn btn-default btn-sm">{{'CANCEL' | translate}}</button>
+            <a ng-click="secEdit.cancel()" type="button" class="btn btn-default btn-sm">{{'CANCEL' | translate}}</a>
             <!-- 保存 -->
             <button form="secEditForm" type="submit" class="btn btn-primary btn-sm"><i class="icon ion-ios-checkmark-outline"></i> {{'SAVE' | translate}}</button>
         </div>
