--- a/pages/terminal.html
+++ b/pages/terminal.html
@@ -8,7 +8,7 @@
                 <ul  class="nav-stacked  panel-collapse" ng-if="terminal.idd==hotel.ID" style="padding:0">
                     <li ng-repeat="sec in terminal.seclist"  style="list-style: none" ng-click="terminal.getSectionDevNum(sec.ID)">
                         <a ng-hide="true"></a>
-                        <button class="btn-default" style="width: 100%;border: 0" >{{sec.Name[terminal.defaultLangCode]}}</button>
+                        <button class="btn-default" style="width: 100%;border: 0;padding-left: 30px;text-align: left;" >{{sec.Name[terminal.defaultLangCode]}}</button>
                     </li>
                 </ul>
             </li>
