--- a/pages/tv/simplePicTextEdit_DietRecom.html
+++ b/pages/tv/simplePicTextEdit_DietRecom.html
@@ -7,7 +7,7 @@
                     <span aria-hidden="true">&times;</span>
                     <span class="sr-only">Close</span>
                 </button>
-                <h5 class="modal-title">编辑图片信息</h5>
+                <h5 class="modal-title">编辑图文信息</h5>
             </div>
             <!--/header end-->
             <!--body-->
