--- a/pages/doctorInfoEdit.html
+++ b/pages/doctorInfoEdit.html
@@ -1,8 +1,8 @@
-<div ng-controller="doctorInfoController as docinfo" ng-init="docinfo.init()" class="modal-dialog">
+<div ng-controller="staffInfoEditController as staffEdit" ng-init="staffEdit.init()" class="modal-dialog">
     <div class="modal-content">
         <!--header-->
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" ng-click="docinfo.cancel()">
+            <button type="button" class="close" data-dismiss="modal" ng-click="staffEdit.cancel()">
                 <span aria-hidden="true">&times;</span>
                 <span class="sr-only">Close</span>
             </button>
@@ -13,22 +13,16 @@
         <div class="modal-body">
             <div ng-show="loading">loading...</div>
             <!-- form -->
-            <form id="docinfoForm" name="docinfoForm" ng-submit="docinfoForm.$valid && docinfo.save()" role="form">
-                <div class="form-group">
-                    <div class="form-group">
-                        <label >序号 {{lang.name}}</label>
-                        <input type="text" class="form-control" ng-model="docinfo.Info.num"  disabled/>
-                    </div>
-                </div>
+            <form id="staffEditForm" name="staffEditForm" ng-submit="staffEditForm.$valid && staffEdit.save()" role="form">
                 <!--客房名-->
-                <ng-repeat ng-repeat="lang in docinfo.editLangs">
+                <ng-repeat ng-repeat="lang in staffEdit.editLangs">
                     <div class="form-group" ng-if="lang.default">
                         <label>姓名 {{lang.name}}</label>
-                        <input type="text" class="form-control"  ng-model="docinfo.Info.Name[lang.code]"  disabled/>
+                        <input type="text" class="form-control"  ng-model="staffEdit.Info.Name[lang.code]"   />
                     </div>
                     <div class="form-group" ng-if="lang.default !== true">
                         <label>姓名 {{lang.name}}</label>
-                        <input type="text" class="form-control" ng-model="docinfo.Info.Name[lang.code]" disabled/>
+                        <input type="text" class="form-control" ng-model="staffEdit.Info.Name[lang.code]"  />
                     </div>
                 </ng-repeat>
                 <!--/客房名-->
@@ -38,7 +32,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <!-- 图 -->
-                            <div ng-repeat="img in docinfo.imgs.data" class="form-thumbnail" style="background-image: url({{img.src}});height: 270px!important;width: 185px!important;">
+                            <div ng-repeat="img in staffEdit.imgs.data" class="form-thumbnail" style="background-image: url({{img.src}});height: 270px!important;width: 185px!important;">
                                 <!-- 进度条 -->
                                 <div class="progress form-thumbnail-progress" ng-show="!({{img.progress}}==100)">
                                     <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{img.progress}}%;">
@@ -47,64 +41,74 @@
                                 <!-- 删除按钮 -->
 
                             </div>
-                           <!-- &lt;!&ndash; 上传按钮 &ndash;&gt;
-                            <div ng-click="docinfo.clickUpload('upload')" class="form-thumbnail form-thumbnail-creat">
-                                <i class="icon ion-upload"></i> 上传图片
-                                <input id="upload" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload" />
-                                <a id="hidenUpload" style="display: none;" ng-click="docinfo.imgs.uploadFile('myFile', docinfo.imgs)"></a>
-                            </div>-->
+                             <!-- 上传按钮 -->
+                             <div ng-click="staffEdit.clickUpload('upload')" class="form-thumbnail form-thumbnail-creat" style="margin-top: 195px">
+                                 <i class="icon ion-upload"></i> 上传图片
+                                 <input id="upload" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload" />
+                                 <a id="hidenUpload" style="display: none;" ng-click="staffEdit.imgs.uploadFile('myFile', staffEdit.imgs)"></a>
+                             </div>
                         </div>
                     </div>
                 </div>
                 <!--/客房图-->
-                <ng-repeat ng-repeat="lang in docinfo.editLangs">
+                <ng-repeat ng-repeat="lang in staffEdit.editLangs">
                     <div class="form-group" ng-if="lang.default">
                         <label>职称 {{lang.name}}</label>
-                        <input type="text" class="form-control"  ng-model="docinfo.Info.Professor[lang.code]"  disabled/>
+                        <input type="text" class="form-control"  ng-model="staffEdit.Info.Professor[lang.code]"   />
                     </div>
                     <div class="form-group" ng-if="lang.default !== true">
                         <label>职称 {{lang.name}}</label>
-                        <input type="text" class="form-control" ng-model="docinfo.Info.Professor[lang.code]" disabled/>
+                        <input type="text" class="form-control" ng-model="staffEdit.Info.Professor[lang.code]"  />
                     </div>
                 </ng-repeat>
-                <ng-repeat ng-repeat="lang in docinfo.editLangs">
+                <ng-repeat ng-repeat="lang in staffEdit.editLangs">
                     <div class="form-group" ng-if="lang.default">
                         <label>特长 {{lang.name}}</label>
-                        <textarea ng-trim="false" class="form-control"  ng-model="docinfo.Info.Skill[lang.code]"  disabled></textarea>
+                        <textarea ng-trim="false" class="form-control"  ng-model="staffEdit.Info.Skill[lang.code]"   ></textarea>
                     </div>
                     <div class="form-group" ng-if="lang.default !== true">
                         <label>特长 {{lang.name}}</label>
-                        <textarea ng-trim="false" class="form-control" ng-model="docinfo.Info.Skill[lang.code]" disabled></textarea>
+                        <textarea ng-trim="false" class="form-control" ng-model="staffEdit.Info.Skill[lang.code]"  ></textarea>
                     </div>
                 </ng-repeat>
 
                 <!--/标签-->
                 <!-- 客房介绍摘要 -->
-                <!-- <ng-repeat ng-repeat="lang in docinfo.editLangs">
+                <!-- <ng-repeat ng-repeat="lang in staffEdit.editLangs">
                     <div class="form-group" ng-if="lang.default">
                         <label>客房介绍摘要 {{lang.name}}</label>
-                        <input class="form-control" rows="1" ng-model="docinfo.room.Roomsummary[lang.code]" required placeholder="（必填）" maxlength="50">
+                        <input class="form-control" rows="1" ng-model="staffEdit.room.Roomsummary[lang.code]" required placeholder="（必填）" maxlength="50">
                     </div>
                     <div class="form-group" ng-if="lang.default !== true">
                         <label>客房介绍摘要 {{lang.name}}</label>
-                        <input class="form-control" rows="1" ng-model="docinfo.room.Roomsummary[lang.code]" maxlength="50">
+                        <input class="form-control" rows="1" ng-model="staffEdit.room.Roomsummary[lang.code]" maxlength="50">
                     </div>
                 </ng-repeat> -->
                 <!-- /客房介绍摘要 -->
                 <!-- 客房介绍 -->
-                <ng-repeat ng-repeat="lang in docinfo.editLangs">
+                <ng-repeat ng-repeat="lang in staffEdit.editLangs">
                     <div class="form-group" ng-if="lang.default">
                         <label>详细介绍{{lang.name}}</label>
-                        <textarea ng-trim="false" class="form-control" rows="2" ng-model="docinfo.Info.Introduction[lang.code]" disabled></textarea>
+                        <textarea ng-trim="false" class="form-control" rows="2" ng-model="staffEdit.Info.Introduction[lang.code]"  ></textarea>
                     </div>
                     <div class="form-group" ng-if="lang.default !== true">
                         <label>详细 {{lang.name}}</label>
-                        <textarea ng-trim="false" class="form-control" rows="2" ng-model="docinfo.Info.Introduction[lang.code]" disabled></textarea>
+                        <textarea ng-trim="false" class="form-control" rows="2" ng-model="staffEdit.Info.Introduction[lang.code]"  ></textarea>
                     </div>
                 </ng-repeat>
                 <!-- /客房介绍 -->
             </form>
         </div>
         <!--body end-->
+        <!--footer-->
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default btn-sm" ng-click="staffEdit.cancel()">
+                {{'CANCEL' | translate}}
+            </button>
+            <button type="submit" class="btn btn-primary btn-sm" form="staffEditForm">
+                <i class="icon ion-ios-checkmark-outline"></i> {{'SAVE' | translate}}
+            </button>
+        </div>
+        <!--footer end-->
     </div>
 </div>
