--- a/pages/doctornurse.html
+++ b/pages/doctornurse.html
@@ -22,6 +22,9 @@
         <!-- 标签页: 分区信息 -->
         <div class="tab-pane" ng-class="{'in active':(dcnur.typestyle==1)}">
             <!--订单列表-->
+            <a ng-click="dcnur.stuffInfoAdd(dcnur.type)" class="button button-light">
+                <i class="icon ion-ios-plus-outline"></i> 添加图文
+            </a>
             <table ng-table="dcnur.tableParams" class="table table-hover table-condensed">
                 <tr ng-repeat="row in $data">
                     <!--订单号-->
@@ -50,13 +53,13 @@
                     客房信息－客房名-->
 
                     <!--入住信息－入住时间-->
-                    <td title="'职称'">
+                    <td title="'职称'" style="max-width: 200px">
                         {{row.Professor[dcnur.defaultLangCode]}}
                     </td>
                     <!--入住信息－入住时间-->
 
                     <!--入住信息－离店时间-->
-                    <td title="'特长'">
+                    <td title="'特长'" style="max-width: 491px">
                         {{row.Skill[dcnur.defaultLangCode]}}
                     </td>
                     <!--入住信息－离店时间-->
@@ -65,7 +68,10 @@
                     <!--操作-->
                     <td title="'操作'">
                         <!--详情-->
-                        <a ng-click="dcnur.gotoDetail(row)">详情</a>
+                        <!--<a ng-click="dcnur.gotoDetail(row)">详情</a>-->
+                        <a ng-click="dcnur.edit(row)">修改</a>
+                        <a ng-click="dcnur.delete(row.ID,$index)">删除</a>
+
                         <!--详情-->
                     </td>
                     <!--操作-->
