--- a/pages/doctorInfoEdit.html
+++ b/pages/doctorInfoEdit.html
@@ -18,7 +18,7 @@
                 <ng-repeat ng-repeat="lang in staffEdit.editLangs">
                     <div class="form-group" ng-if="lang.default">
                         <label>姓名 {{lang.name}}</label>
-                        <input type="text" class="form-control"  ng-model="staffEdit.Info.Name[lang.code]"   />
+                        <input type="text" class="form-control"  ng-model="staffEdit.Info.Name[lang.code]"  required placeholder="请输入姓名（必填）" />
                     </div>
                     <div class="form-group" ng-if="lang.default !== true">
                         <label>姓名 {{lang.name}}</label>
