--- a/pages/terminal.html
+++ b/pages/terminal.html
@@ -30,6 +30,8 @@
                 <select ng-model="terminal.form.Online" class="form-control">
                     <option value="">全部</option>
                     <option value="1">在线</option>
+                    <option value="0">离线</option>
+
                 </select>
             </div>
             <!-- RoomID -->
