--- a/pages/tv/welcome.html
+++ b/pages/tv/welcome.html
@@ -91,7 +91,7 @@
             <div class="form-group">
                 <label>背景视频</label>
                 <!--背景视频修改按钮-->
-                <input id="upload3" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload3" />
+                <input id="upload3" style="display: none;" type="file" video-model="myFile" data-e="hidenUpload3" />
                 <a ng-click="tvWelcome.clickUpload('upload3')">上传</a>
                 <br>
                 <a id="hidenUpload3" style="display: none;" ng-click="tvWelcome.imgs3.uploadFile(myFile, tvWelcome.imgs3)"></a>
