--- a/pages/hospitalHistoryAdd.html
+++ b/pages/hospitalHistoryAdd.html
@@ -15,8 +15,8 @@
                 <div class="form-group">
                     <!--序号-->
                     <label>序号</label>
-                    <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
-                    type="number" ng-model="historyAdd.Seq" min="1" required placeholder="（必填）"/>
+                    <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder='（必填）'"
+                    type="number" ng-model="historyAdd.Seq" min="1" required  placeholder="（必填）"/>
                     <!--/序号-->
                 </div>
                 <div class="form-group">
@@ -47,12 +47,12 @@
                     <ng-repeat ng-repeat="lang in historyAdd.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>标题 {{lang.name}}：</label>
-                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
-                            ng-model="historyAdd.Title[lang.code]" required placeholder="（必填）" />
+                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder='（必填）'"
+                            ng-model="historyAdd.Title[lang.code]" required  placeholder="（必填）"   ng-blur="root.setLimit($event.target,{max:30})" oninput="setCustomValidity('')">
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>标题 {{lang.name}}：</label>
-                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder='（必填）'"
                             ng-model="historyAdd.Title[lang.code]" />
                         </ng-if>
                     </ng-repeat>
@@ -63,11 +63,11 @@
                     <ng-repeat ng-repeat="lang in historyAdd.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="historyAdd.Text[lang.code]">{{historyAdd.Text[lang.code]}}</textarea>
+                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder='（必填）'" required placeholder='（必填）' ng-model="historyAdd.Text[lang.code]" ng-blur="root.removeLimit($event.target,{max:3})" oninput="setCustomValidity('')">{{historyAdd.Text[lang.code]}}</textarea>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="historyAdd.Text[lang.code]">{{historyAdd.Text[lang.code]}}</textarea>
+                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder='（必填）'" ng-model="historyAdd.Text[lang.code]">{{historyAdd.Text[lang.code]}}</textarea>
                         </ng-if>
                     </ng-repeat>
                     <!--/详情-->
