--- a/pages/tv/projectConfig.html
+++ b/pages/tv/projectConfig.html
@@ -11,7 +11,7 @@
                 <!--上传按钮-->
                 <div class="form-thumbnail form-thumbnail-creat" ng-click="projectConfig.clickUpload('upload1')">
                     <i class="icon ion-upload"></i> 上传字体
-                    <input id="upload1"  style="display: none;" type="file" file-model="myFile" data-e="hidenUpload1"/>
+                    <input id="upload1"  style="display: none;" type="file" video-model="myFile" data-e="hidenUpload1"/>
                     <a id="hidenUpload1" style="display: none;" ng-click="projectConfig.imgs1.uploadFile('myFile', projectConfig.imgs1)"></a>
                     <!-- 进度条 -->
 
