--- a/pages/hospitalAroundPicTextAdd.html
+++ b/pages/hospitalAroundPicTextAdd.html
@@ -40,11 +40,11 @@
                     <ng-repeat ng-repeat="lang in aroundTextAdd.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="aroundTextAdd.Text[lang.code]">{{aroundTextAdd.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false"  class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="aroundTextAdd.Text[lang.code]">{{aroundTextAdd.Text[lang.code]}}</textarea>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="aroundTextAdd.Text[lang.code]">{{aroundTextAdd.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false"  class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="aroundTextAdd.Text[lang.code]">{{aroundTextAdd.Text[lang.code]}}</textarea>
                         </ng-if>
                     </ng-repeat>
                     <!--/详情-->
