--- a/pages/hospitalHistoryAdd.html
+++ b/pages/hospitalHistoryAdd.html
@@ -63,11 +63,11 @@
                     <ng-repeat ng-repeat="lang in historyAdd.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder='（必填）'" required placeholder='（必填）' ng-model="historyAdd.Text[lang.code]" ng-blur="root.removeLimit($event.target,{max:3})" oninput="setCustomValidity('')">{{historyAdd.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false"  class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" required placeholder='（必填）' ng-model="historyAdd.Text[lang.code]" ng-blur="root.removeLimit($event.target,{max:3})" oninput="setCustomValidity('')">{{historyAdd.Text[lang.code]}}</textarea>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder='（必填）'" ng-model="historyAdd.Text[lang.code]">{{historyAdd.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false"  class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" ng-model="historyAdd.Text[lang.code]">{{historyAdd.Text[lang.code]}}</textarea>
                         </ng-if>
                     </ng-repeat>
                     <!--/详情-->
