--- a/pages/hospitalPublicAreaEdit.html
+++ b/pages/hospitalPublicAreaEdit.html
@@ -111,11 +111,11 @@
                     <ng-repeat ng-repeat="lang in pubareaEdit.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>简介 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="pubareaEdit.Text[lang.code]">{{pubareaEdit.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" required placeholder="（必填）" ng-model="pubareaEdit.Text[lang.code]">{{pubareaEdit.Text[lang.code]}}</textarea>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>简介 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="pubareaEdit.Text[lang.code]">{{pubareaEdit.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" ng-model="pubareaEdit.Text[lang.code]">{{pubareaEdit.Text[lang.code]}}</textarea>
                         </ng-if>
                     </ng-repeat>
                     <!--/详情-->
