--- a/pages/tv/SimplePicText_PriceEdit.html
+++ b/pages/tv/SimplePicText_PriceEdit.html
@@ -47,12 +47,12 @@
                     <ng-repeat ng-repeat="lang in tvSimplePicTextPriceEdit.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>标题{{lang.name}}：</label>
-                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required"
                             ng-model="tvSimplePicTextPriceEdit.Title[lang.code]" required placeholder="（必填）" />
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>标题 {{lang.name}}：</label>
-                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required"
                             ng-model="tvSimplePicTextPriceEdit.Title[lang.code]" />
                         </ng-if>
                     </ng-repeat>
@@ -64,11 +64,11 @@
                     <ng-repeat ng-repeat="lang in tvSimplePicTextPriceEdit.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>详情{{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="tvSimplePicTextPriceEdit.Text[lang.code]">{{tvSimplePicTextPriceEdit.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" required placeholder="（必填）" ng-model="tvSimplePicTextPriceEdit.Text[lang.code]">{{tvSimplePicTextPriceEdit.Text[lang.code]}}</textarea>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="tvSimplePicTextPriceEdit.Text[lang.code]">{{tvSimplePicTextPriceEdit.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" ng-model="tvSimplePicTextPriceEdit.Text[lang.code]">{{tvSimplePicTextPriceEdit.Text[lang.code]}}</textarea>
                         </ng-if>
                     </ng-repeat>
                     <!--详情-->
@@ -79,11 +79,11 @@
                     <ng-repeat ng-repeat="lang in tvSimplePicTextPriceEdit.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>价格{{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="tvSimplePicTextPriceEdit.Price[lang.code]">{{tvSimplePicTextPriceEdit.Price[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" required placeholder="（必填）" ng-model="tvSimplePicTextPriceEdit.Price[lang.code]">{{tvSimplePicTextPriceEdit.Price[lang.code]}}</textarea>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>价格 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="tvSimplePicTextPriceEdit.Price[lang.code]">{{tvSimplePicTextPriceEdit.Price[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" ng-model="tvSimplePicTextPriceEdit.Price[lang.code]">{{tvSimplePicTextPriceEdit.Price[lang.code]}}</textarea>
                         </ng-if>
                     </ng-repeat>
                     <!--详情-->
