--- a/pages/tv/simplePicTextAdd_DietRecom.html
+++ b/pages/tv/simplePicTextAdd_DietRecom.html
@@ -47,12 +47,12 @@
                     <ng-repeat ng-repeat="lang in tvSimplePicTextEdit.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>标题 {{lang.name}}：</label>
-                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                            <input ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required"
                             ng-model="tvSimplePicTextEdit.Title[lang.code]" required placeholder="（必填）" />
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>标题 {{lang.name}}：</label>
-                            <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                            <input ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required"
                             ng-model="tvSimplePicTextEdit.Title[lang.code]" />
                         </ng-if>
                     </ng-repeat>
@@ -63,11 +63,11 @@
                     <ng-repeat ng-repeat="lang in tvSimplePicTextEdit.editLangs">
                         <ng-if ng-if="lang.default">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" required placeholder="（必填）" ng-model="tvSimplePicTextEdit.Text[lang.code]">{{tvSimplePicTextEdit.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" required placeholder="（必填）" ng-model="tvSimplePicTextEdit.Text[lang.code]">{{tvSimplePicTextEdit.Text[lang.code]}}</textarea>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <label>详情 {{lang.name}}：</label>
-                            <textarea class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）"" ng-model="tvSimplePicTextEdit.Text[lang.code]">{{tvSimplePicTextEdit.Text[lang.code]}}</textarea>
+                            <textarea ng-trim="false" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" ng-model="tvSimplePicTextEdit.Text[lang.code]">{{tvSimplePicTextEdit.Text[lang.code]}}</textarea>
                         </ng-if>
                     </ng-repeat>
                     <!--详情-->
