--- a/pages/projectConfig/hotelList.html
+++ b/pages/projectConfig/hotelList.html
@@ -1,6 +1,6 @@
 <div ng-controller="pcHotelListController as pcHotelList" ng-init="pcHotelList.init()">
     <!-- title     -->
-    <h4 class="ng-binding">医院管理</h4>
+    <h4 class="ng-binding">{{pcHotelList.list[0].Name[pcHotelList.defaultLangCode]}}</h4>
     <hr>
     <!--loading-->
     <div ng-show="pcHotelList.loading">loading...</div>
@@ -9,21 +9,19 @@
     <div class="row">
         <div class="col-xs-5">
             <div class="row">
-                <a ng-click="pcHotelList.add()" class="button button-light">
-                    <i class="icon ion-ios-plus-outline"></i> 添加医院
-                </a>
+                <div class="button button-light">
+                    科室
+                </div>
                 <!--添加门店-->
                 <!--hotel list-->
              </div>
             <div class="row">
                 <div>
                     <ul class="list-group">
-                        <li ng-repeat="hotel in pcHotelList.list" class="list-group-item">
-                            {{hotel.Name[pcHotelList.defaultLangCode]}}
-                            <a ng-click="pcHotelList.showSections(hotel.ID)"  class="btn pull-right">分区</a>
+                        <li ng-repeat="sec in pcHotelList.section" class="list-group-item">
+                            {{sec.Name[pcHotelList.defaultLangCode]}}
+                            <a ng-click="pcHotelList.showSmallSections(sec.Name[pcHotelList.defaultLangCode],sec.ID)"  class="btn pull-right">分区</a>
 
-                            <a ng-click="pcHotelList.delete(hotel.ID)"  class="btn pull-right">删除</a>
-                            <a ng-click="pcHotelList.edit(hotel.ID)" class="btn pull-right">编辑</a>
                             <br>
                         </li>
                     </ul>
